Mon Apr 28 12:13:54 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_sunos5_common.GNU:
          Added kstat support needed for monitoring lib on solaris

Mon Apr 28 12:05:54 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MonitorControl/*:
          Merge from MonitorControl branch.

Mon Apr 28 11:37:54 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-all.h:
        * ace/Global_Macros.h:
          Moved set of define to config-all

        * ace/Truncate.h:
        * ace/Condition_T.h:
          Doxygen fix

Mon Apr 28 11:36:46 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Acceptor.h:
        * ace/Acceptor.cpp:

          Added a virtual method to facilitate the configurable handling of
          accept() errors.

Mon Apr 28 11:30:54 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ETCL/*:
          New ETCL library for ACE

        * bin/MakeProjectCreator/config/ace_etcl.mpb:
        * bin/MakeProjectCreator/config/ace_etcl_parser.mpb:
        * bin/MakeProjectCreator/config/ace_mc.mpb:
          New base projects

        * bin/MakeProjectCreator/config/acenosubsets.mpb:
          Layout changes

Mon Apr 28 10:31:54 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Monitor_Admin.cpp:
        * ace/Monitor_Admin.h:
        * ace/Monitor_Admin_Manager.cpp:
        * ace/Monitor_Admin_Manager.h:
        * ace/Monitor_Base.cpp:
        * ace/Monitor_Base.h:
        * ace/Monitor_Base.inl:
        * ace/Monitor_Control_Action.cpp:
        * ace/Monitor_Control_Action.h:
        * ace/Monitor_Control_Types.cpp:
        * ace/Monitor_Control_Types.h:
        * ace/Monitor_Point_Registry.cpp:
        * ace/Monitor_Point_Registry.h:
        * ace/ace.mpc:
        * ace/Global_Macros.h:
          First commit coming from the Monitor branch. This will add a
          monitoring framework to ACE with which size of queues, cpu load