@@ -11,6 +11,7 @@
 #include "ace/WFMO_Reactor.h"
 #include "ace/OS_NS_stdio.h"
 #include "ace/OS_NS_string.h"
+#include "ace/OS_NS_netdb.h"
 
 ACE_RCSID (ace,
            Service_Manager,
@@ -301,10 +302,11 @@ ACE_Service_Manager::handle_input (ACE_HANDLE)
       ACE_INET_Addr sa;
       if (this->client_stream_.get_remote_addr (sa) == -1)
         return -1;
-
+      char  hoststr[MAXHOSTNAMELEN+1] = "<unknow>";
+      sa.get_host_name (hoststr, MAXHOSTNAMELEN+1);
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT ("accepted from host %s at port %d\n"),
-                  ACE_TEXT_CHAR_TO_TCHAR (sa.get_host_name ()),
+                  ACE_TEXT_CHAR_TO_TCHAR (hoststr),
                   sa.get_port_number ()));
     }
 
